--- a/scripts/gradle.properties
+++ b/scripts/gradle.properties
@@ -1,4 +1,4 @@
-nexusUrl=http://nexus.mars.303net.pvt:8081/nexus
+nexusUrl=http://nexus.url/nexus
 nexusUsername=
 nexusPassword=
 includeEmptyDirs = false
